<resources>
    <string name="app_name">AppOfZhejiang</string>
    <string name="tab_main">首页</string>
    <string name="tab_flag">景点</string>
    <string name="tab_shoppingMall">商城</string>
    <string name="tab_my">我的</string>
    <string name="edit_strategy">找攻略</string>
    <string name="edit_scenic">找景点</string>
    <string name="localWeather">当地天气：</string>
    <string name="localPoem">诗画·地点</string>
    <string name="login">点击登录/注册</string>
    <string name="attention">在产品使用前解除合同的，必要的费用扣除标准为：
    行程前6-4日，收取费用总额20%的违约金。
    行程前3-1日，收取费用总额40%的违约金。
    行程开始当日，收取费用总额60%的违约金。
    因部分资源需提前预订的特殊性，本产品在行程前6天外取消的，也将产生实际损失，具体损失包括但不限于机票、高铁等，如购买者需要取消订单，应及时联系本公司，公司除协助购买者减损并退还未实际发生的损失费用外不再承担其他赔偿责任。
    </string>
    <string name="importantTips">预授权或付款成功后如需更改、取消、退订，将按您所订资源的退变更条款收取费用。
    请您在预订时务必提供准确、完整的信息（姓名、性别、证件号码、联系方式等），以免产生预订错误，影响出行。如因您提供信息错误而造成损失，由您自行承担。</string>
    <string name="songcheng">宋城以“建筑为形，文化为魂”为经营理念，仿宋代风格建造，主体建筑依据北宋画家张择端的长卷《清明上河图》而建，并按照宋书《营造法式》建造，还原了宋代都市风貌，是杭州第一个反映两宋文化内涵的主题公园，年接待游客超过1000万。大型歌舞《宋城千古情》是宋城的灵魂，与拉斯维加斯的O秀、巴黎红磨坊并称“世界三大名秀”。
    </string>
    <string name="songchengqianguqing">大型歌舞《宋城千古情》是杭州宋城景区的灵魂，与拉斯维加斯的“O”秀、巴黎红磨坊并称“世界三大名秀”。用声、光、电科技手段和舞台机械等呈现方式演绎了良渚古人的艰辛、宋皇宫的辉煌、岳家军的惨烈、梁祝和白蛇许仙的经典故事。
    </string>
    <string name="hotel1">本酒店装修时尚高雅，设施齐全，环境舒适。拥有跃层商务客房，酒店还配有豪华餐饮包厢、中西自助餐厅、会议厅、商务中心、精品屋、美容美发和足浴中心等，服务配套与娱乐设施一应俱全。酒店以“宾客至上，服务第一”为经营宗旨，采用了科学的经营机制和管理方法，不断追求卓越，得到了社会的认可，更被省有关部门确定贵宾接待酒店。无论商务、宴会、休闲、娱乐，都是您的理想之选。</string>
    <string name="hotel2">本酒店地理位置优越，位于市商业区之心脏地带，出门便是美食的天堂，是四通八达的交通汇点，交通方便，通往各个景区都有直达专车。</string>
    <string name="taxi2">八戒租车，提供自驾租车、商务用车、个性化定制用车方案。全国任意网点支持异地取、还车，不限里程，拥有24小时客服、24小时救援、24小时门店，让您可以随时随地享受无忧的用车服务！</string>
    <string name="taxi1">八戒租车，租车自驾，就选八戒租车，车行严选，海量优质车型，24小时专业客服团队。八戒租车，便利你的出行，国内自驾租车，尽在八戒。</string>
    <string name="guider1">本公司导游都是受过专业培训，拥有导游资格证的正规导游，本公司以“保障并提高游客服务安全质量，让游客安心托付”为第一要素，让旅客朋友们可以开心游玩。</string>
    <string name="guider2">一个好的导游不仅仅能向游客介绍沿途的风土人情，更重要的是能带给游客一份愉悦的心情，导游是游客的指南针。</string>
    <string name="farmhouse1">农家乐是新兴的旅游休闲形式，是农民向城市现代人提供的一种回归自然从而获得身心放松、愉快精神的休闲旅游方式。周围山水环绕、绿色成荫，你可以体验瓜果采摘乐趣、可以去湖边独钓、也可以深夜农家烧烤或者享受农家美味菜肴！我们是一家集旅游、餐饮住宿、休闲娱乐为一体的理农家度假场所！我们提供的豪华大床房、干净舒服的双人床、温暖的三人床；房间设施齐全、24小时热水空调、独立卫生间、免费宽带上网、液晶电视等。提供自制的农家菜肴，有清蒸鱼、红烧肉、老鸭汤、口水鸡等美味佳肴；
目前提供休闲娱乐项目有休闲棋牌、湖边垂钓、瓜果采摘、欢乐ktv、自制烧烤、周边景点游玩等活动。</string>
    <string name="farmhouse2">我们的使命：致力成为本市最具特色农家乐之一、让每一位前来游玩的游客宾至如归、在这里你可以尽情的玩、尽情的疯、放下工作疲惫、放下工作的烦恼、享受真正的特色农家生活！</string>
    <string name="food1">浙菜富有江南特色，历史悠久，源远流长，是中国著名的地方菜种。浙菜起源于新石器时代的河姆渡文化，经越国先民的开拓积累，汉唐时期的成熟定型，宋元时期的繁荣和明清时期的发展，浙江菜的基本风格已经形成。</string>
    <string name="food2">浙菜基于以上四大流派，就整体而言，有比较明显的特色风格，又具有共同的四个特点：选料讲究，烹饪独到，注重本味，制作精细。具有悠久历史的浙江菜品种丰富，菜式小巧玲珑，菜品鲜美滑嫩、脆软清爽，其特点是清、香、脆、嫩、爽、鲜，在中国众多的地方风味中占有重要的地位。浙菜主要有杭州、宁波、绍兴、温州四个流派所组成，各自带有浓厚的地方特色。</string>
    <string name="techan1">浙江地势由西南向东北倾斜，地形复杂。山脉自西南向东北成大致平行的三支。地跨钱塘江、瓯江、灵江、苕溪、甬江、飞云江、鳌江、曹娥江八大水系，由平原、丘陵、盆地、山地、岛屿构成。浙江省地处亚热带中部，属季风性湿润气候，自然条件较优越。</string>
    <string name="techan2">优越的自然条件当然可以产生各种各样优越的特产，琳琅满目的特产让你们眼花缭乱。</string>

    <dimen name="custom_section_height">10dp</dimen>
    <string name="title_activity_tourism_culture">TourismCultureActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>