<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNotWhite"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorNotWhite"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableRight="@drawable/arrow_down"
                android:gravity="center"
                android:paddingRight="10dp"
                android:text="定位"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/main_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_edit_search"
                android:drawableLeft="@drawable/main_search"
                android:drawablePadding="10dp"
                android:hint="@string/edit_strategy"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_weather"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/local_weather"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/localWeather"
            android:textColor="@color/colorLightBlack"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ly_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ly_topImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#000"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="#000"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_bottomImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="#000"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="#000"
                    android:scaleType="centerCrop" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_poem"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/poem"
            android:drawableRight="@drawable/arrow"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/localPoem"
            android:textColor="@color/colorLightBlack"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fg1_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>